Реализация системы уведомлений о статусе задач с Kafka Основные изменения:
Добавлена конфигурация Kafka с Docker Compose
Реализован продюсер для отправки сообщений об изменении статуса
Создан консьюмер для обработки сообщений и отправки уведомлений
Интегрирован Spring Mail для email-уведомлений
Добавлена обработка ошибок и механизм повторных попыток
Реализована "мертвая очередь" для необработанных сообщений
Настроено партиционирование топика (3 партиции)
Добавлено подробное логирование всех операций
Реализованы интеграционные и модульные тесты
Обновлена документация (README.md)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,41 @@
 spring.application.name=t1_hw
-
 # Server port
 server.port=8080
-
 # H2 Database
 spring.datasource.url=jdbc:h2:mem:taskdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-
 # H2 Console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-
 # JPA
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
-
 # Logging
 logging.level.com.example.taskmanager.aspect=DEBUG
 logging.level.com.example.taskmanager.service=INFO
+logging.level.root=INFO
+logging.level.com.example.taskkafka=DEBUG
+logging.file.name=logs/task-kafka.log
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+# Kafka Configuration
+spring.kafka.bootstrap-servers=localhost:29092
+spring.kafka.consumer.group-id=task-group
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.consumer.enable-auto-commit=false
+spring.kafka.listener.ack-mode=MANUAL_IMMEDIATE
+kafka.topic.name=task-status-updates
+# Email Configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=ivklim7@gmail.com
+spring.mail.password=fcka lxii raww inps
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
