Реализация системы уведомлений о статусе задач с Kafka Основные изменения:
Добавлена конфигурация Kafka с Docker Compose
Реализован продюсер для отправки сообщений об изменении статуса
Создан консьюмер для обработки сообщений и отправки уведомлений
Интегрирован Spring Mail для email-уведомлений
Добавлена обработка ошибок и механизм повторных попыток
Реализована "мертвая очередь" для необработанных сообщений
Настроено партиционирование топика (3 партиции)
Добавлено подробное логирование всех операций
Реализованы интеграционные и модульные тесты
Обновлена документация (README.md)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,41 +1,53 @@
-spring.application.name=t1_hw
-# Server port
+# Application Basics
+spring.application.name=t1-hw
 server.port=8080
-# H2 Database
-spring.datasource.url=jdbc:h2:mem:taskdb
-spring.datasource.driverClassName=org.h2.Driver
+# Database Configuration (H2)
+spring.datasource.url=jdbc:h2:mem:taskdb;DB_CLOSE_DELAY=-1  
+spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-# H2 Console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-# JPA
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
+# JPA/Hibernate
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
-# Logging
-logging.level.com.example.taskmanager.aspect=DEBUG
-logging.level.com.example.taskmanager.service=INFO
-logging.level.root=INFO
-logging.level.com.example.taskkafka=DEBUG
-logging.file.name=logs/task-kafka.log
+spring.jpa.open-in-view=false
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+# Logging Configuration
+logging.level.com.example.taskmanager=INFO
+logging.level.org.springframework.kafka=WARN 
+logging.level.root=WARN
+logging.file.name=logs/application.log
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+logging.logback.rollingpolicy.max-file-size=10MB
+logging.logback.rollingpolicy.max-history=7
 # Kafka Configuration
 spring.kafka.bootstrap-servers=localhost:29092
+spring.kafka.producer.acks=1
+spring.kafka.producer.linger-ms=5
+spring.kafka.producer.batch-size=16384
+spring.kafka.producer.buffer-memory=33554432
 spring.kafka.consumer.group-id=task-group
 spring.kafka.consumer.auto-offset-reset=earliest
-spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.consumer.enable-auto-commit=false
+spring.kafka.consumer.max-poll-records=500
 spring.kafka.listener.ack-mode=MANUAL_IMMEDIATE
-kafka.topic.name=task-status-updates
+spring.kafka.listener.concurrency=3
+# Kafka Topics
+kafka.topic.task-status-updates=task-status-updates
 # Email Configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=ivklim7@gmail.com
-spring.mail.password=fcka lxii raww inps
+spring.mail.username=${EMAIL_USERNAME}
+spring.mail.password=${EMAIL_PASSWORD}
+spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=3000
+spring.mail.properties.mail.smtp.writetimeout=5000
+spring.mail.test-connection=true
