--- a/src/test/java/application.properties
+++ b/src/test/java/application.properties
@@ -1,2 +1,4 @@
-spring.kafka.enabled=false
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.kafka.KafkaAutoConfiguration
+spring.kafka.bootstrap-servers=localhost:9092
+kafka.topic.task-status-updates=test-topic
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
