--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,12 +38,13 @@ spring.kafka.consumer.max-poll-records=500
 spring.kafka.listener.ack-mode=MANUAL_IMMEDIATE
 spring.kafka.listener.concurrency=3
 # Kafka Topics
+kafka.topic.name=task-name
 kafka.topic.task-status-updates=task-status-updates
 # Email Configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=${EMAIL_USERNAME}
-spring.mail.password=${EMAIL_PASSWORD}
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
@@ -51,3 +52,8 @@ spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=3000
 spring.mail.properties.mail.smtp.writetimeout=5000
 spring.mail.test-connection=true
+api.logging.enabled=true
+api.logging.level=INFO
+api.logging.log-request=true
+api.logging.log-response=true
+api.logging.log-execution-time=true
