--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,9 @@ spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 # Logging Configuration
 logging.level.com.example.taskmanager=INFO
 logging.level.org.springframework.kafka=WARN 
+logging.level.org.springframework=DEBUG
+logging.level.org.springframework.boot.autoconfigure.mail=DEBUG
+
 logging.level.root=WARN
 logging.file.name=logs/application.log
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
